--- a/Views/Item.ejs
+++ b/Views/Item.ejs
@@ -232,5 +232,36 @@
     </section>
     <br>
     <hr>
+    <section id="product1" class="section-p1" style="margin-left: 100dp;">
+    <h2>Best Summer Collection</h2>
+    <div class="pro-container">
+        <% productss.forEach((product) => { %>
+        <div class="pro">
+            <img class="p1" src="/Images/<%= product.Image %>">
+            <div class="des">
+                <span><%= product.ProductName %></span>
+                <h5><%= product.title %></h5>
+                <div class="star">
+                    <i class="material-icons">star</i>
+                    <i class="material-icons">star</i>
+                    <i class="material-icons">star</i>
+                    <i class="material-icons">star</i>
+                    <i class="material-icons">star</i>
+                </div>
+                <h4><%= product.price %></h4>
+            </div>
+            <div>
+                <form action="/item" method="post" id="add_to_cart">
+                    <input name="pname" value ="<%= product.ProductName%>" hidden></input>
+                    <input name="psize" value="<%= product.Size%>" hidden></input>
+                    <input class="buy-button"  type="submit" onclick="" value="Show Item"/></input>
+                    <a href="/user/Cart"><i class="material-icons cart">shop</i></a>
+                </form>
+              </div>
+
+        </div>
+        <% }) %>
+    </div>
+    </section>
 </body>
 </html>
