--- a/Views/partials/Nav.ejs
+++ b/Views/partials/Nav.ejs
@@ -85,6 +85,19 @@
 
         <div>
             <ul id="navbar">
+            
+        <div>
+            <ul id="navbar">
+                <div id="google_translate_element"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
                 <li><a class="home" href="/">Home</a></li>
                 <li><a href="/Product">Shop</a></li>
                 <% if(user.Type==="admin" ){ %>
