--- a/Views/Edit_Users.ejs
+++ b/Views/Edit_Users.ejs
@@ -64,7 +64,7 @@
             <div class="form-group">
                 <label for="user-role">Role:</label>
                 <select id="user-role" name="type" value="<%= Puser.Type%>" >
-                    <option >Select a role</option>
+                    <option ><%= Puser.Type%></option>
                     <option value="admin">admin</option>
                     <option value="customer">Customer</option>
                 </select>
