--- a/Views/Contact.ejs
+++ b/Views/Contact.ejs
@@ -15,7 +15,7 @@
 <title>Contactus</title>
 <script src="https://kit.fontawesome.com/3929e16ef5.js" crossorigin="anonymous"></script>
 <script src="{% static 'network/functions.js' %}"></script>
-
+<script src="//code.tidio.co/tu1stys3qwixtipasrjnph1mwc7mgfl8.js" async></script>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
