--- a/Views/partials/Nav.ejs
+++ b/Views/partials/Nav.ejs
@@ -152,6 +152,12 @@ function googleTranslateElementInit() {
 
         };
     </script>
+    <div>
+    <form action="/search" method="GET" class="search-form">
+  <input type="text" name="query" placeholder="Search products..." />
+  <button type="submit">Search</button>
+  </div>
+</form>
 </body>
 
 </html>
