--- a/Views/WishList.ejs
+++ b/Views/WishList.ejs
@@ -195,7 +195,7 @@
           <div class="product-info">
             <h3 class="product-name"><%= product.ProductName %></h3>
             <p class="product-description"><%= product.Smalldesc %></p>
-            <p class="product-add"><a href="/wishlist/AddtoCart/<%= product._id %>" class="add">Add to cart</a>
+            <p class="product-add"><a href="/wishlist/AddtoCart/<%= product._id %>" class="add">AddtoCart</a>
             </p>
             <p class="product-remove">
               <a href="/wishlist/remove/<%= product._id %>" class="remove">Remove</a>
