--- a/Views/partials/Nav.ejs
+++ b/Views/partials/Nav.ejs
@@ -88,7 +88,7 @@
             
         <div>
             <ul id="navbar">
-              
+              <div id="google_translate_element"></div>
 
                 <li><a class="home" href="/">Home</a></li>
                 <li><a href="/Product">Shop</a></li>
