--- a/Views/partials/Nav.ejs
+++ b/Views/partials/Nav.ejs
@@ -97,6 +97,8 @@ function googleTranslateElementInit() {
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
                 <li><a class="home" href="/">Home</a></li>
                 <li><a href="/Product">Shop</a></li>
+                <li><a href="/chatbot">Chatbot</a></li>
+
                 <% if(user.Type==="admin" ){ %>
                     <li> <a href='/admin/AddminM'>Admin</a></li>
                     <% } %>
@@ -158,3 +160,5 @@ function googleTranslateElementInit() {
 </body>
 
 </html>
+
+
