--- a/Views/Home.ejs
+++ b/Views/Home.ejs
@@ -385,6 +385,8 @@ body {
                 <h4><%= product.price %></h4>
               </div>
               <a href="#"><i class="material-icons cart">shop</i></a>
+              <a href="bot"><i class="material-icons cart">chatbot</i></a>
+
             </div>
             <% }) %>
           </div>
