--- a/Views/partials/Nav.ejs
+++ b/Views/partials/Nav.ejs
@@ -104,7 +104,10 @@ function googleTranslateElementInit() {
                     <% } %>
                         <li><a href="/user/Contact">Contact</a></li>
                         <li><a href="/user/WishList"><i id="heart" class="far fa-heart"></i></a></li>
-                        <li><a href="/user/Cart"><i class="material-icons">shop</i></a></li>
+                        <% if(user.Type==="admin" ){ %>
+                            <li><a href="/user/Cart"><i class="material-icons">shop</i></a></li>
+                            <% } %>
+                        
                         <% if(user==="" ) { %>
                             <li> <a href='/user/Login2'>Login</a></li>
                             <% } else { %>
