--- a/Public/CSS/Nav.css
+++ b/Public/CSS/Nav.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: "Spartan", sans-serif;
 }
+
 #header {
     display: flex;
     align-items: center;
@@ -17,6 +18,7 @@
     left: 0;
 
 }
+
 #header .logo {
     text-decoration: none;
     font-size: 16px;
@@ -24,10 +26,13 @@
     color: #fffcfc;
     font-family: Serif;
 }
+
 #navbar {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
+    /* Added flex-wrap */
 }
 
 #navbar li {
@@ -45,13 +50,6 @@
     transition: 0.3s ease;
 }
 
-
-
-#navbar li a:hover,
-#navbar li a.active {
-    color: #eb9e10;
-}
-
 #navbar li a.active::after,
 #navbar li a:hover::after {
     content: "";
@@ -62,6 +60,12 @@
     bottom: -4px;
     left: 20px;
 }
+
 #heart {
     font-size: 25px;
+}
+
+li.name {
+    color: #fffcfc;
+    font-style: italic;
 }
