--- a/Views/ProductsPage.ejs
+++ b/Views/ProductsPage.ejs
@@ -223,7 +223,7 @@
                                     </div>
                                     <h4><%= pro.Price %></h4>
                                 </div>
-                                <a href="cart.html"><i class="material-icons cart">shop</i></a>
+                                <a href="#"><i class="material-icons cart">shop</i></a>
                             </a>
                         </div>
                         <% }) %>
